# creative_writer_cli_project_manager

./: .gitignore  LICENSE  README.md  development_plan.md  how_to_remove_virtual_environment.md  pyproject.toml  remove_venv.sh  requirements.txt  run.sh  run_from_github.sh
.github/workflows/: publish.yml
my_proj/Notes/: meta.json
src/: main.py
src/creative_writer_cli/: ascii_art.py  cli.py  project_manager.py
src/creative_writer_cli/core/: models.py  templates.py
src/creative_writer_cli/data/: json_store.py  repositories.py
src/creative_writer_cli/data/repositories/: json_store.py  project_repository.py
src/creative_writer_cli/ui/: ascii_art.py  cli.py  cli_app.py  display.py  wizards.py
src/creative_writer_cli/ui/display/: tables.py  views.py
src/creative_writer_cli/ui/section_handlers/: base_section_handler.py  chapter_handler.py  character_handler.py  generic_handler.py  notes_handler.py  plot_handler.py  reference_handler.py  scientific_text_handler.py  theme_handler.py  worldbuilding_handler.py
src/creative_writer_cli/ui/services/: note_import_service.py  project_interaction_service.py
src/creative_writer_cli/ui/wizards/: generic_wizards.py  novel_wizards.py  scientific_wizards.py
src/creative_writer_cli/utils/: config_manager.py  path_helpers.py  reference_export_formatter.py  word_counter.py
src/creative_writer_cli/utils/exporters/: bibtex_formatter.py  json_exporter.py  markdown_exporter.py  markdown_formatters.py  ris_formatter.py  txt_exporter.py  zotero_rdf_formatter.py
tests/: test_project_repository.py
